welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
max2Value:15: error: Unmatched closing brace '}' ignored here
 }
 ^